# WordAlignment

./: FourWay.cabal  README.md  WordAlign.hs  WordAlignment.cabal  bigram.gra  cabal.project  changelog.md  defaultSimpleScoring  devel-stack.yaml  nightly-stack.yaml  nway-nancy.gra  nway.gra  simple.scores  stack.yaml  vowel-consonant.txt
Linguistics/: Bigram.hs  Bigrams.hs  Common.hs  FourWay.hs  ThreeWay.hs  Tools.hs  TwoWay.hs  Word.hs  WordAlignment.hs
Linguistics/FourWay/: Backward.hs  Bigram.hs  Common.hs  Forward.hs  Simple.hs
Linguistics/Scoring/: Simple.hs  SimpleParser.hs
Linguistics/ThreeWay/: Bigram.hs  Common.hs  Simple.hs
Linguistics/TwoWay/: AdvancedBigram.gra  AdvancedBigram.hs  Aligned.hs  Bigram.hs  Common.hs  Simple.hs
Linguistics/TwoWay/Infix/: Simple.hs
Linguistics/WordAlignment/: AlignmentBuilder.hs  Bigram.hs  Common.hs  FastLookups.hs  PipedPairs.hs  Word.hs
Linguistics/WordAlignment/TwoWay/: AdvancedBigram.hs  Aligned.hs  Bigram.hs  Common.hs  Simple.hs
Linguistics/WordAlignment/TwoWay/Global/: Bigram.hs  Simple.hs
Linguistics/WordAlignment/TwoWay/Infix/: Bigram.hs  Simple.hs
NLP/: FourWay.hs  ThreeWay.hs  TwoWay.hs
_old/: FourWay.hs  ThreeWay.hs  TwoWay.hs
_old/Scoring/: SimpleParser.hs
_old/ThreeWay/: Bigram.hs  Common.hs
scores/: defaultBigramScores  defaultBigramScoring
src/: WordAlign.hs
tests/: PTSP800.bgms  PTpoSPpampa.words  PTsoloSPsuelo.words  example.bgms  example.words  global-bigram-PTSP800-PTpoSPpampa-1.golden  global-bigram-PTSP800-PTpoSPpampa.golden  global-bigram-PTSP800-PTsoloSPsuelo-1.golden  global-bigram-PTSP800-PTsoloSPsuelo.golden  global-bigram-example-example-1.golden  global-bigram-example-example.golden  global-bigram-order-order-1.golden  global-unigram-PTSP800-PTpoSPpampa-1.golden  global-unigram-PTSP800-PTpoSPpampa.golden  global-unigram-PTSP800-PTsoloSPsuelo-1.golden  global-unigram-PTSP800-PTsoloSPsuelo.golden  global-unigram-example-example-1.golden  global-unigram-example-example.golden  infix-bigram-example-example.golden  infix-bigram.golden  order.bgms  order.words  properties.hs
