name:           FourWay
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, Nancy Retzlaff, Lydia Steiner, Peter F. Stadler, 2013
copyright:      Christian Hoener zu Siederdissen, 2013
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Linguistics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
synopsis:
                Word alignments (in multiple dimensions)
description:
                Describe me!



Extra-Source-Files:
  README.md



library
  build-depends:
    base >= 4 && < 5,
    ghc-prim,
    deepseq        >= 1.3     ,
    primitive      >= 0.5     ,
    repa           >= 3.2     ,
    strict         >= 0.3.2   ,
    transformers              ,
    tuple-th       >= 0.2.4   ,
    vector         >= 0.10    ,
    QuickCheck     >= 2.5     ,
    PrimitiveArray >= 0.5.1   
--    ADPfusion      >= 0.2
  exposed-modules:
    Linguistics.FourWay
    Linguistics.ThreeWay
    Linguistics.TwoWay

  ghc-options:
    -O2
    -funbox-strict-fields
    -fsimpl-tick-factor=1000000

executable WordAlign
  build-depends:
    cmdargs   >= 0.10 ,
    parallel  >= 3.2
  main-is:
    WordAlign.hs
  ghc-options:
    -O2
    -funbox-strict-fields
    -funfolding-use-threshold100
    -funfolding-keeness-factor100
    -fsimpl-tick-factor=1000000
--    -fnew-codegen
    -fllvm
    -optlo-O3 -optlo-std-compile-opts
    -fllvm-tbaa



--source-repository head
--  type: git
--  location: git://github.com/choener/WordAlign

