name:           WordAlignment
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, Nancy Retzlaff, Lydia Steiner, Peter F. Stadler, 2013
copyright:      Christian Hoener zu Siederdissen, 2013
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Linguistics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
synopsis:
                Bigram word alignments in 2-4 dimensions.
description:
                The library provides fast dynamic programming algorithms to
                align 2-4 words using bigram scoring.

Extra-Source-Files:
  README.md

Flag Opt
  description: use the ghc optimizer
  default:     True

library
  build-depends:
    base                      >= 4 && < 5 ,
    attoparsec                >= 0.10     ,
    bytestring                            ,
    containers                            ,
    control-monad-omega       >= 0.3      ,
    deepseq                   >= 1.3      ,
    dlist                     >= 0.6      ,
    file-embed                >= 0.0.6    ,
    ghc-prim                              ,
    hashable                  >= 1.1      ,
    hashtables                >= 1.1      ,
    intern                    >= 0.9      ,
    lens                      >= 3.9      ,
    primitive                 >= 0.5      ,
    QuickCheck                >= 2.5      ,
    repa                      >= 3.2      ,
    strict                    >= 0.3.2    ,
    stringable                >= 0.1.2    ,
    text                      >= 0.11     ,
    transformers                          ,
    tuple-th                  >= 0.2.4    ,
    unordered-containers      >= 0.2.3    ,
    vector                    >= 0.10     ,
    ADPfusion                 >= 0.2      ,
    NaturalLanguageAlphabets  >= 0.0.0.2  ,
    PrimitiveArray            >= 0.5.1
  exposed-modules:
--    Linguistics.FourWay
--    Linguistics.FourWay.Backward
--    Linguistics.FourWay.Common
--    Linguistics.FourWay.Forward
--    Linguistics.ThreeWay
--    Linguistics.ThreeWay.Bigram
--    Linguistics.ThreeWay.Common
--    Linguistics.ThreeWay.Simple
    Linguistics.Bigram
    Linguistics.Common
    Linguistics.TwoWay
    Linguistics.TwoWay.Bigram
    Linguistics.TwoWay.Common
    Linguistics.TwoWay.Simple
    Linguistics.Word
  ghc-options:
    -fsimpl-tick-factor=900
  if flag(Opt)
    ghc-options:
      -O2

executable WordAlign
  build-depends:
    cmdargs   >= 0.10 ,
    parallel  >= 3.2
  main-is:
    WordAlign.hs
  ghc-options:
    -fsimpl-tick-factor=900
  if flag(Opt)
    ghc-options:
      -O2
      -funfolding-use-threshold100
      -funfolding-keeness-factor100
      -- -fnew-codegen
--      -fllvm
--      -optlo-O3 -optlo-std-compile-opts
--      -fllvm-tbaa



--source-repository head
--  type: git
--  location: git://github.com/choener/WordAlignment

