name:           WordAlignment
version:        0.0.3.0
author:         Christian Hoener zu Siederdissen, 2013-2015
copyright:      Christian Hoener zu Siederdissen, 2013-2015
homepage:       https://github.com/choener/WordAlignment
bug-reports:    https://github.com/choener/WordAlignment/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Linguistics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.1
synopsis:       Bigram word alignments in 2-4 dimensions.
description:
                The library provides fast dynamic programming algorithms to
                align 2-4 words using bigram scoring.



Extra-Source-Files:
  README.md
  changelog.md



Flag opt
  description:  use the ghc optimizer (can be set False to speed up compilation)
  default:      True
  manual:       True

Flag llvm
  description:  use llvm backend (use, if possible!)
  default:      False
  manual:       True



library
  build-depends: base                       >= 4.7      && < 4.9
               , ADPfusion                  >= 0.4.0.2  && < 0.5.1
               , AlignmentAlgorithms        >= 0.0.2    && < 0.0.3
               , attoparsec                 >= 0.10     && < 0.14
               , bytestring
               , containers
               , control-monad-omega        >= 0.3      && < 0.4
               , deepseq                    >= 1.3      && < 1.5
               , file-embed                 >= 0.0.6    && < 0.1
               , fmlist                     >= 0.9      && < 0.10
               , FormalGrammars             >= 0.2.1    && < 0.2.2
               , ghc-prim
               , GrammarProducts            >= 0.1.1    && < 0.1.2
               , hashable                   >= 1.1      && < 1.3
               , intern                     >= 0.9      && < 0.10
               , lens                       >= 4.0      && < 4.14
               , NaturalLanguageAlphabets   >= 0.0.2    && < 0.0.3
               , primitive                  >= 0.5      && < 0.7
               , PrimitiveArray             >= 0.6.0    && < 0.7.1
               , strict                     >= 0.3.2    && < 0.3.3
               , stringable                 >= 0.1.2    && < 0.1.4
               , template-haskell
               , text                       >= 1.0      && < 1.3
               , transformers
               , tuple-th                   >= 0.2.4    && < 0.2.6
               , unordered-containers       >= 0.2.3    && < 0.2.6
               , vector                     >= 0.10     && < 0.12
  exposed-modules:
    Linguistics.Bigram
    Linguistics.Common
--    Linguistics.FourWay
--    Linguistics.FourWay.Backward
--    Linguistics.FourWay.Common
--    Linguistics.FourWay.Forward
--    Linguistics.ThreeWay
--    Linguistics.ThreeWay.Bigram
--    Linguistics.ThreeWay.Common
--    Linguistics.ThreeWay.Simple
--    Linguistics.TwoWay
--    Linguistics.TwoWay.AdvancedBigram
    Linguistics.TwoWay.Bigram
--    Linguistics.TwoWay.Common
    Linguistics.TwoWay.Simple
    Linguistics.Word
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , PatternGuards
                    , QuasiQuotes
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  ghc-options:
    -fsimpl-tick-factor=900
  if flag(Opt)
    ghc-options:
      -O2
  if flag(llvm)
    ghc-options:
      -fllvm
      -optlo-O3 -optlo-std-compile-opts
      -fllvm-tbaa



executable WordAlign
  build-depends: base
               , bytestring
               , cmdargs                    == 0.10.*
               , containers
               , intern
               , NaturalLanguageAlphabets
               , parallel                   >= 3.2      && < 3.3
               , strict
               , WordAlignment
               , unordered-containers
               , vector
  main-is:
    WordAlign.hs
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveDataTypeable
                    , OverloadedStrings
                    , PatternGuards
                    , RecordWildCards
                    , ScopedTypeVariables
  ghc-options:
    -fsimpl-tick-factor=900
    -rtsopts
  if flag(opt)
    ghc-options:
      -O2
      -funfolding-use-threshold100
      -funfolding-keeness-factor100
  if flag(llvm)
    ghc-options:
      -fllvm
      -optlo-O3 -optlo-std-compile-opts
      -fllvm-tbaa



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , ScopedTypeVariables
                    , TemplateHaskell
  build-depends: base
               , QuickCheck
               , test-framework               >= 0.8  && < 0.9
               , test-framework-quickcheck2   >= 0.3  && < 0.4
               , test-framework-th            >= 0.2  && < 0.3
               , WordAlignment



source-repository head
  type: git
  location: git://github.com/choener/WordAlignment

