name:           WordAlignment
version:        0.2.0.0
author:         Christian Hoener zu Siederdissen, 2013-2015
copyright:      Christian Hoener zu Siederdissen, 2013-2015
homepage:       https://github.com/choener/WordAlignment
bug-reports:    https://github.com/choener/WordAlignment/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Linguistics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.2
synopsis:       Bigram word pair alignments.
description:
                The library provides fast dynamic programming algorithms to
                align word pairs using either a simple or a bigram scoring
                scheme. Simple schemes are unigram schemes in nature but use an
                ad-hoc scoring scheme. Bigram schemes use actual training data
                for bigram frequences.



Extra-Source-Files:
  changelog.md
  README.md
  scores/defaultBigramScores
  scores/defaultSimpleScores
  stack.yaml
  tests/example.bgms
  tests/example.words



flag debug
  description:  dump intermediate Core files
  default:      False
  manual:       True



library
  build-depends: base                       >= 4.7      &&  < 4.9
               , ADPfusion                  >= 0.5.2    &&  < 0.5.3
               , aeson                      >= 0.9      &&  < 0.10
               , AlignmentAlgorithms        >= 0.0.2    &&  < 0.0.3
               , attoparsec                 >= 0.10     &&  < 0.14
               , bimaps                     >= 0.1
               , bytestring
               , containers
               , data-default               >= 0.5      &&  < 0.6
               , deepseq                    >= 1.3      &&  < 1.5
               , DPutils                    >= 0.0      &&  < 0.1
               , file-embed                 >= 0.0.6    &&  < 0.1
               , fmlist                     >= 0.9      &&  < 0.10
               , FormalGrammars             >= 0.2.1    &&  < 0.4
               , ghc-prim
               , GrammarProducts            >= 0.1.1    &&  < 0.1.2
               , hashable                   >= 1.1      &&  < 1.3
               , intern                     >= 0.9      &&  < 0.10
               , lens                       >= 4.0      &&  < 4.14
               , LinguisticsTypes           >= 0.0.0    &&  < 0.0.1
               , mtl
               , NaturalLanguageAlphabets   >= 0.1.1    &&  < 0.2.0
               , pipes                      >= 4.0      &&  < 5.0
               , primitive                  >= 0.5      &&  < 0.7
               , PrimitiveArray             >= 0.6.0    &&  < 0.7.1
               , strict                     >= 0.3.2    &&  < 0.3.3
               , stringable                 >= 0.1.2    &&  < 0.1.4
               , template-haskell
               , text                       >= 1.0      &&  < 1.3
               , text-format                >= 0.3      &&  < 0.4
               , transformers
               , tuple-th                   >= 0.2.4    &&  < 0.2.6
               , unordered-containers       >= 0.2.3    &&  < 0.2.6
               , vector                     >= 0.10     &&  < 0.12
  exposed-modules:
    Linguistics.WordAlignment
    Linguistics.WordAlignment.AlignmentBuilder
    Linguistics.WordAlignment.Bigram
    Linguistics.WordAlignment.Common
    Linguistics.WordAlignment.PipedPairs
    Linguistics.WordAlignment.TwoWay.Global.Bigram
    Linguistics.WordAlignment.TwoWay.Global.Simple
    Linguistics.WordAlignment.TwoWay.Infix.Bigram
    Linguistics.WordAlignment.TwoWay.Infix.Simple
    Linguistics.WordAlignment.Word
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PatternGuards
                    , QuasiQuotes
                    , RecordWildCards
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  ghc-options:
    -fsimpl-tick-factor=900
    -O2
  if flag(debug)
    ghc-options:
      -ddump-to-file
      -ddump-simpl
      -dsuppress-all



executable WordAlign
  build-depends: base
               , aeson
               , bytestring
               , cmdargs                    >= 0.10
               , containers
               , data-default
               , DPutils                    >= 0.0      &&  < 0.1
               , file-embed
               , intern
               , lens
               , LinguisticsTypes
               , mtl
               , NaturalLanguageAlphabets
               , parallel                   >= 3.2      &&  < 3.3
               , pipes
               , strict
               , stringable
               , text
               , text-format                >= 0.3      &&  < 0.4
               , transformers
               , unordered-containers
               , vector
               , WordAlignment
  main-is:
    WordAlign.hs
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveDataTypeable
                    , FlexibleContexts
                    , NondecreasingIndentation
                    , OverloadedStrings
                    , PatternGuards
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TemplateHaskell
  ghc-options:
    -fsimpl-tick-factor=900
    -rtsopts
    -O2
    -funfolding-use-threshold100
    -funfolding-keeness-factor100



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TemplateHaskell
  build-depends: base
               , bytestring
               , containers
               , DPutils                    >= 0.0      &&  < 0.1
               , NaturalLanguageAlphabets
               , tasty                      >= 0.11
               , tasty-quickcheck           >= 0.8
               , tasty-silver               >= 3.1
               , tasty-th                   >= 0.1
               , text
               , WordAlignment



source-repository head
  type: git
  location: git://github.com/choener/WordAlignment

